--- a/index.html
+++ b/index.html
@@ -11,88 +11,88 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-1 greyBg">1
+            <div class="col-1 greyBg">1
             </div>
-            <div class="col-sm-9 whiteBg">2
+            <div class="col-9 whiteBg">2
             </div>
-            <div class="col-sm-1 greyBg">3
+            <div class="col-1 greyBg">3
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-1 greyBg">1</div>
-            <div class="col-sm-3 whiteBg">2</div>
-            <div class="col-sm-1 orangeBg">3</div>
-            <div class="col-sm-1 yellowBg">4</div>
-            <div class="col-sm-1 orangeBg">5</div>
-            <div class="col-sm-3 whiteBg">6</div>
-            <div class="col-sm-1 greyBg">7</div>
+            <div class="col-1 greyBg">1</div>
+            <div class="col-3 whiteBg">2</div>
+            <div class="col-1 orangeBg">3</div>
+            <div class="col-1 yellowBg">4</div>
+            <div class="col-1 orangeBg">5</div>
+            <div class="col-3 whiteBg">6</div>
+            <div class="col-1 greyBg">7</div>
         </div>
         <div class="row">
-            <div class="col-sm-1 greyBg"></div>
-            <div class="col-sm-2 whiteBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 blackBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-2 whiteBg"></div>
-            <div class="col-sm-1 greyBg"></div>
+            <div class="col-1 greyBg"></div>
+            <div class="col-2 whiteBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 blackBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-2 whiteBg"></div>
+            <div class="col-1 greyBg"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2 greyBg"></div>
-            <div class="col-sm-2 orangeBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 blackBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-2 orangeBg"></div>
-            <div class="col-sm-2 greyBg"></div>
+            <div class="col-2 greyBg"></div>
+            <div class="col-2 orangeBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 blackBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-2 orangeBg"></div>
+            <div class="col-2 greyBg"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2 greyBg"></div>
-            <div class="col-sm-1 whiteBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 blackBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-1 whiteBg"></div>
-            <div class="col-sm-2 greyBg"></div>
+            <div class="col-2 greyBg"></div>
+            <div class="col-1 whiteBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 blackBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-1 whiteBg"></div>
+            <div class="col-2 greyBg"></div>
         </div>
         <div class="row">
-            <div class="col-sm-3 greyBg"></div>
-            <div class="col-sm-1 whiteBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-1 yellowBg"></div>
-            <div class="col-sm-1 orangeBg"></div>
-            <div class="col-sm-1 whiteBg"></div>
-            <div class="col-sm-3 greyBg"></div>
+            <div class="col-3 greyBg"></div>
+            <div class="col-1 whiteBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-1 yellowBg"></div>
+            <div class="col-1 orangeBg"></div>
+            <div class="col-1 whiteBg"></div>
+            <div class="col-3 greyBg"></div>
         </div>
         <div class="row">
-            <div class="col-sm-1 whiteBg">1</div>
-            <div class="col-sm-3 greyBg">2</div>
-            <div class="col-sm-3 whiteBg">3</div>
-            <div class="col-sm-3 greyBg">4</div>
-            <div class="col-sm-1 whiteBg">5</div>
+            <div class="col-1 whiteBg">1</div>
+            <div class="col-3 greyBg">2</div>
+            <div class="col-3 whiteBg">3</div>
+            <div class="col-3 greyBg">4</div>
+            <div class="col-1 whiteBg">5</div>
         </div>
         <div class="row">
-            <div class="col-sm-2 whiteBg">1</div>
-            <div class="col-sm-7 greyBg">2</div>
-            <div class="col-sm-2 whiteBg">3</div>
+            <div class="col-2 whiteBg">1</div>
+            <div class="col-7 greyBg">2</div>
+            <div class="col-2 whiteBg">3</div>
         </div>
         <div class="row">
-            <div class="col-sm-3 whiteBg">a</div>
-            <div class="col-sm-5 greyBg">s</div>
-            <div class="col-sm-3 whiteBg">d</div>
+            <div class="col-3 whiteBg">a</div>
+            <div class="col-5 greyBg">s</div>
+            <div class="col-3 whiteBg">d</div>
         </div>
         <div class="row">
-            <div class="col-sm-4 whiteBg"></div>
-            <div class="col-sm-3 greyBg"></div>
-            <div class="col-sm-4 whiteBg"></div>
+            <div class="col-4 whiteBg"></div>
+            <div class="col-3 greyBg"></div>
+            <div class="col-4 whiteBg"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 whiteBg"></div>
-            <div class="col-sm-3 greyBg"></div>
-            <div class="col-sm-4 whiteBg"></div>
+            <div class="col-4 whiteBg"></div>
+            <div class="col-3 greyBg"></div>
+            <div class="col-4 whiteBg"></div>
         </div>
     </div>
 
